# kitchen-inventory

./: .env.example  .gitignore  .gitignore.rtf  CLAUDE.md  README.md  Untitled.json  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: pr-checks.yml  security.yml
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  config.json
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _global-error.html  _not-found.rsc  add-item.html  add-item.rsc  analytics.html  analytics.rsc  archived.html  archived.rsc  auth.html  auth.rsc  (+13 more)
.next/types/: routes.d.ts  validator.ts
app/: error.tsx  globals.css  layout.tsx  manifest.ts  page.tsx  providers.tsx
app/add-item/: page.tsx
app/analytics/: page.tsx
app/archived/: page.tsx
app/auth/: page.tsx
app/authorize/: page.tsx
app/dashboard/: error.tsx  layout.tsx  page.tsx
app/landing-preview/: layout.tsx  page.tsx
app/privacy/: page.tsx
app/profile/: page.tsx
app/recipes/: page.tsx
app/search/: page.tsx
app/shopping-list/: page.tsx
app/terms/: page.tsx
components/: add-item-form.tsx  advanced-filters.tsx  archived-items.tsx  auth-gate.tsx  auth-screen.tsx  bottom-navigation.tsx  bug-report-dialog.tsx  buy-bottom-sheet.tsx  currency-input.tsx  edit-item-form.tsx  email-ingestion-banner.tsx  email-ingestion-review.tsx  filter-chips.tsx  insights-panel.tsx  inventory-dashboard.tsx  inventory-loading.tsx  item-detail-sheet.tsx  landing-page.tsx  loading-tip.tsx  main-layout.tsx  meal-plan-generator.tsx  onboarding-tour.tsx  profile-settings.tsx  pwa-install-prompt.tsx  pwa-update-banner.tsx  quantity-input.tsx  quantity-with-units.tsx  quick-add-section.tsx  recipe-detail.tsx  recipe-import-sheet.tsx  recipe-review-screen.tsx  recipes-list.tsx  review-chip.tsx  review-prompt.tsx  screenshot-bug-nudge.tsx  search-and-filter.tsx  shopping-list.tsx  smart-suggestions.tsx  star-rating.tsx  swiggy-integration-card.tsx  (+5 more)
components/ui/: animated-list.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  input-otp.tsx  input.tsx  loading-button.tsx  popover.tsx  resizable.tsx  select.tsx  sheet.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx
contexts/: email-ingestion-context.tsx  inventory-context.tsx  recipe-import-context.tsx  review-context.tsx  shopping-count-context.tsx
docs/: alexa-setup.md  decisions.md  design-conventions.md  feature-catalog.yaml  github-user-bug-report-playbook.md  known-limitations.md  login-500-root-cause-analysis.md  mcp-backlog.md  mcp-supabase-playbook.md  p2-release-operations-checklist.md
hooks/: use-auth-user.tsx  use-bug-report-nudge.tsx  use-is-standalone.ts  use-mobile.tsx  use-onboarding.ts  use-onboarding.tsx  use-overlay-active.ts  use-speech-recognition.ts  use-toast.ts  use-user-settings.tsx  use-voice-session.ts
lib/: api-client.ts  console-capture.ts  constants.ts  data.ts  dev-seed-fixtures.ts  feature-flags.ts  grocery-platforms.ts  haptics.ts  recipes-events.ts  supabase-client.ts  supabase.ts  types.ts  utils.ts  zod.ts
lib/client/: api.ts
lib/domain/: inventory.test.mts  inventory.ts
lib/mcp/: auth.ts  tools.ts
lib/server/: ai-key-crypto.ts  ai-provider-validation.ts  ai-store.ts  create-supabase-server.ts  email-normalizer.ts  pantry-match.ts  request-context.ts  require-user.ts  supabase-admin.ts  supabase-as-user.ts  supabase-server-client.ts  user-ai-settings-store.ts
n8n/: recipe-import-workflow.json
scripts/: design-lint.mjs  generate-pwa-assets.py
supabase/migrations/: 202602270001_base_tables_and_beta_seed.sql  20260227170000_add_user_rls_and_indexes.sql  202603010002_migrate_to_user_id.sql  202603040001_add_brand_ordered_from_to_shopping.sql  202603080001_quantity_with_units.sql  202603100001_add_wastage_reason.sql  202603110001_add_voice_to_added_from.sql  202603110002_recipe_tables.sql  202603120001_recipe_score_columns.sql  202603130001_recipe_ingredient_fields.sql  202603140001_recipe_imports_status_deleted.sql  202603150001_recipe_is_bookmark.sql  202603180001_pending_shares.sql  202603200001_ai_interactions.sql  202603200002_user_settings.sql  202603210001_ai_interactions_insert_policy.sql  202604010001_fix_ai_interactions_schema.sql  202604020001_email_ingestions.sql  202605200001_add_agent_to_added_from.sql  202605210001_feature_grants.sql  202605270001_slm_ready_ai_capture.sql  202605270002_unit_not_null.sql  202605270003_review_dismissed.sql  202606010001_voice_session_logs.sql  202606060001_swiggy_oauth.sql
supabase/tests/: user_rls_isolation.sql
types/: speech-recognition.d.ts
voice-agent/: .env.example  .gitignore  LEARNINGS.md  README.md  auth.py  logger.py  modal_app.py  pipeline.py  pyproject.toml  test_client.html
voice-agent/tools/: __init__.py  mcp_writes.py  reads.py
(+454 files in other folders)
